# txt-chat

./: Cargo.toml  README.md
examples/: client.rs  server.rs
src/: errors.rs  lib.rs  main.rs
src/chatsvc/: mod.rs
src/client/: client.rs
src/event/: handler.rs  mod.rs
