[package]
name = "txt-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["io-std", "io-util", "net", "sync", "rt-multi-thread", "signal", "macros"] }
bytes = "1"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tokio-util = { version="0.7.16", features=["codec"] }
thiserror = "2.0.16"
chrono = "0.4.42"
nanoid = "0.4.0"
anyhow = "1.0.99"
futures = "0.3"